// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can paste hyperlink into list 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "marks": Array [
                    Object {
                      "attrs": Object {
                        "__confluenceMetadata": null,
                        "href": "http://atlassian.com/",
                      },
                      "type": "link",
                    },
                  ],
                  "text": "http://atlassian.com/",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
  ],
  "type": "doc",
}
`;

exports[`can paste hyperlink into paragraph 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "marks": Array [
            Object {
              "attrs": Object {
                "__confluenceMetadata": null,
                "href": "http://atlassian.com/",
              },
              "type": "link",
            },
          ],
          "text": "http://atlassian.com/",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;
